--- a/PingpongScoreBoard/Base.lproj/Main.storyboard
+++ b/PingpongScoreBoard/Base.lproj/Main.storyboard
@@ -59,6 +59,14 @@
                                     <action selector="newGameButtonWasSelected:" destination="9pv-A4-QxB" eventType="primaryActionTriggered" id="Pei-kg-S8k"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DNh-WB-gqL">
+                                <rect key="frame" x="366" y="876" width="195" height="86"/>
+                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="m8K-bw-FOg" kind="show" identifier="playerSegue" id="JNa-jc-Nwn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -75,6 +83,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2246" y="-640"/>
+        </scene>
+        <!--Players-->
+        <scene sceneID="9DB-SS-AmV">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Players" id="m8K-bw-FOg" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zOg-1f-Rd4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2054.5" y="-8"/>
         </scene>
         <!--Settings-->
         <scene sceneID="wg7-f3-ORb">
@@ -119,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2246" y="624"/>
+            <point key="canvasLocation" x="2246" y="998"/>
         </scene>
         <!--Players-->
         <scene sceneID="aD4-FW-6FL">
@@ -147,7 +163,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4qX-m1-35J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2240" y="1857"/>
+            <point key="canvasLocation" x="1226" y="1973"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
