--- a/PingPongPhoneApp/PingPongPhoneApp/Base.lproj/Main.storyboard
+++ b/PingPongPhoneApp/PingPongPhoneApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="40d-Cg-7FO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="40d-Cg-7FO">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,7 +17,17 @@
                     <view key="view" contentMode="scaleToFill" id="CO6-Ho-5i1">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gam-Z3-fGT">
+                                <rect key="frame" x="263" y="47" width="74" height="30"/>
+                                <state key="normal" title="Add Player"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gam-Z3-fGT" firstAttribute="top" secondItem="oPC-9q-ZuF" secondAttribute="bottom" constant="27" id="WFd-e4-yIZ"/>
+                            <constraint firstItem="gam-Z3-fGT" firstAttribute="centerX" secondItem="CO6-Ho-5i1" secondAttribute="centerX" id="iNC-A6-Dz7"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="P8l-IA-tYI"/>
                 </viewController>
@@ -25,7 +35,7 @@
             </objects>
             <point key="canvasLocation" x="1137" y="904"/>
         </scene>
-        <!--Players-->
+        <!--Game-->
         <scene sceneID="dgW-SP-XNv">
             <objects>
                 <viewController id="IOl-UT-310" customClass="FirstViewController" customModule="PingPongPhoneApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -108,7 +118,7 @@
                             <constraint firstItem="z1Q-Qf-CpX" firstAttribute="top" secondItem="p71-zp-UDu" secondAttribute="bottom" constant="10" id="t8A-wj-kQS"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Players" image="icon" id="pCU-M2-kMz"/>
+                    <tabBarItem key="tabBarItem" title="Game" image="pingpong" id="pCU-M2-kMz"/>
                     <connections>
                         <outlet property="gameButton" destination="zXs-Fk-TTe" id="l7R-Ne-Qzz"/>
                         <outlet property="player1Label" destination="DtY-Gx-MF7" id="JSF-Ae-OSk"/>
@@ -141,7 +151,7 @@
             </objects>
             <point key="canvasLocation" x="314" y="521"/>
         </scene>
-        <!--Game-->
+        <!--Players-->
         <scene sceneID="eJK-4H-2lS">
             <objects>
                 <tableViewController id="e57-vN-bc4" customClass="PlayerTableViewController" customModule="PingPongPhoneApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -164,7 +174,7 @@
                             <outlet property="delegate" destination="e57-vN-bc4" id="qnF-lE-RS1"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Game" image="pingpong" id="CWN-Mn-mli"/>
+                    <tabBarItem key="tabBarItem" title="Players" image="icon" id="CWN-Mn-mli"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n7l-Np-gF6" userLabel="First Responder" sceneMemberID="firstResponder"/>
